# nacos-serving-python

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
demo/: requirements.txt
demo/discovery/: aiohttp_example.py  error_handling_example.py  httpx_example.py  requests_example.py  simple_example.py  simple_urlopen_example.py  urllib_example.py
demo/django/: app.py  manage_import.py  nacos.yaml  test_app_with_import.py  test_app_with_middleware.py
demo/django/myapp/: models.py  urls.py  views.py
demo/django/myproject/: settings.py  urls.py
demo/fastapi/: app.py  nacos.yaml  test_app_with_import.py  test_app_with_middleware.py
demo/flask/: app.py  nacos.yaml  test_app_with_import.py  test_app_with_middleware.py
src/nacos/auto/services/: registry.py
src/nacos/utils/: tools.py
test/: discovery_blacklist_test.py
