[project]
name = "nacos-serving-python"
version = "0.1.0"
description = "Nacos 2.x async serving & config SDK with auto registration and discovery extensions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nacos-sdk-python>=2.0.5",
    "aiohttp>=3.10.11",
    "pyyaml>=5.1",
    "watchdog>=2.0.0",
    "psutil>=5.8.0",
    "httpx>=0.28.0"
    # 去掉 setuptools：不应作为运行时依赖
]

[tool.hatch.build.targets.wheel]
# 仅打包实际包路径而不是整个 src 根
packages = ["src/nacos"]

[tool.hatch.build.targets.sdist]
# 限定源码发布内容（可按需增减）
include = [
  "src/nacos",
  "README.md",
  "LICENSE",
  "pyproject.toml"
]
exclude = [
  "demo",
  "scripts",
  "tests*"
]

[project.scripts]
nacos-serving-python = "nacos.auto.registration:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uvicorn]
dev-dependencies = ["pyright>=1.1.389"]

